# PyPiper

./: .replit  desired.py  pyproject.toml  run_tests.py
src/pypiper/: __init__.py  algorithm.py  branching.py  core.py  planning.py  subprocess.py
src/pypiper/graph/: gencol.py  planning.py
src/pypiper/utils/: __init__.py  gencol.py  iteration.py
tests/: core_test.py
