[tool.poetry]
name = "pypiper"
version = "0.1.0"
description = ""
authors = ["M. Emery Goss <m.goss792@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
git-python = "^1.0.3"
piper = "^0.14.2"
pytest = "^8.2.2"
anyio = "^4.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pytest = "^8.2.1"
pytest-black-ng = "^0.4.1"
pytest-mypy = "^0.10.3"
pytest-ruff = "^0.3.2"
ruff = "^0.4.5"
pytest-asyncio = "^0.23.7"
pyright = "^1.1.373"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]

[tool.black]
line-length = 70

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true

[tool.pyright]
# # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
# useLibraryCodeForTypes = true
# exclude = ["**"]

[tool.ruff]
target-version = "py310"
src = ["src"]
exclude = [
    "src/__pycache__",
    ".*cache",
    ".pythonlibs",
    "desired.py",
]
# https://beta.ruff.rs/docs/configuration/

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # Pyflakes
    "C90",     # mccabe
    "I",       # isort
    "N",       # pep8-naming
    "D",       # pydocstyle
    "UP",      # pyupgrade
    "YTT",     # flake8-2020
    # "ANN",     # flake8-annotations
    "ASYNC",   # flake8-async
    "FBT",     # flake8-boolean-trap
    "B",       # flake8-bugbear
    "A",       # flake8-builtins
    "COM",     # flake8-commas
    "C4",      # flake8-comprehensions
    "DTZ",     # flake8-datetimez
    "T10",     # flake8-debugger
    "EXE",     # flake8-executable
    "FA",      # flake8-future-annotations
    "ISC",     # flake8-implicit-str-concat
    "LOG",     # flake8-logging
    "G",       # flake8-logging-format
    "PIE",     # flake8-pie
    "T20",     # flake8-print
    "PYI",     # flake8-pyi
    "PT",      # flake8-pytest-style
    "Q",       # flake8-quotes
    "RET",     # flake8-return
    "SLF",     # flake8-self
    "SLOT",    # flake8-slots
    "SIM",     # flake8-simplify
    "TID252",  # flake8-tidy-imports -- relative-imports
    "TCH",     # flake8-type-checking
    "ARG",     # flake8-unused-arguments
    "PTH",     # flake8-use-pathlib
    "PGH",     # pygrep-hooks
    "PL",      # pylint
    "TRY",     # tryceratops
    "FLY",     # flynt
    "PERF",    # Perflint
    "FURB",    # refurb
    "RUF",     # Ruff-specific rules
]
ignore = [
    # Groups not enabled:
    "DJ",      # flake8-django
    "EM",      # flake8-errmsg
    "ICN",     # flake8-import-convention
    "INP",     # flake8-no-pep420
    "RSE",     # flake8-raise
    "TID",     # flake8-tidy-imports
    "INT",     # flake8-gettext
    "NPY",     # NumPy
    "AIR",     # Airflow

    # Specific checks not enabled:
    "D202",    # no-blank-line-after-function
    "D203",    # one-blank-line-before-class
    "D212",    # multi-line-summary-first-line
    "W291",
    "W292",
    "W293",
    "G003",    # logging-string-concat
    "G004",    # logging-f-string
    "SIM107",  # return-in-try-except-finally (maybe enable this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "D",       # pydocstyle
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
